adding files to repo

--- a/chat_app/flask/templates/base.html
+++ b/chat_app/flask/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Web Chat App</title>
+    <title>Web Chatroom</title>
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
@@ -11,7 +11,7 @@
     ></script>
   </head>
   <body>
-    <img src="https://img1.wsimg.com/isteam/ip/d982021e-fc03-443a-819c-0ce130820b9e/TPC%20Three%20Full%20Logo.png/:/rs=w:96,h:100,cg:true,m/cr=w:96,h:100/qt=q:95">
+    <img src=""> {% comment %} add image URL here {% endcomment %}
     <br>
     <div class="content">{% block content %} {% endblock %}</div>
   </body>
